--- a/src/app/calculator/calculator.component.html
+++ b/src/app/calculator/calculator.component.html
@@ -1,9 +1,25 @@
-<form class="postcard" [formGroup]="salaryForm">
+<form class="postcard" [formGroup]="salaryForm" (ngSubmit)="onSubmit(salaryForm.value)">
+	<div *ngIf="base.invalid" class="alert">
+		<div *ngIf="base.errors.required">
+	    	Обязательное поле для ввода
+	  	</div>
+	  	<div *ngIf="base.errors.pattern">
+	    	Введите число
+	  	</div>
+  	</div>
 	<div class="form-row">
 		<label for="base">
   			Оклад
 		</label>
-    	<input id="base" type="text" formControlName="base">
+    	<input id="base" type="text" formControlName="base" required>
+  	</div>
+  	<div *ngIf="workdays.invalid" class="alert">
+		<div *ngIf="workdays.errors.required">
+	    	Обязательное поле для ввода
+	  	</div>
+	  	<div *ngIf="workdays.errors.pattern">
+	    	Введите целое число
+	  	</div>
   	</div>
   	<div class="form-row">
 		<label for="workDays">
@@ -11,17 +27,41 @@
 		</label>
     	<input id="workDays" type="text" formControlName="workDays">
   	</div>
+  	<div *ngIf="paydays.invalid" class="alert">
+		<div *ngIf="paydays.errors.required">
+	    	Обязательное поле для ввода
+	  	</div>
+	  	<div *ngIf="paydays.errors.pattern">
+	    	Введите целое число
+	  	</div>
+  	</div>
   	<div class="form-row">
 		<label for="payDays">
   			Расчетный период
 		</label>
     	<input id="payDays" type="text" formControlName="payDays">
   	</div>
+  	<div *ngIf="coff.invalid" class="alert">
+		<div *ngIf="coff.errors.required">
+	    	Обязательное поле для ввода
+	  	</div>
+	  	<div *ngIf="coff.errors.pattern">
+	    	Введите число
+	  	</div>
+  	</div>
 	<div class="form-row">
 		<label for="coff">
   			Коэффициент
 		</label>
     	<input id="coff" type="text" formControlName="coff">
+  	</div>
+  	<div *ngIf="premium.invalid" class="alert">
+		<div *ngIf="premium.errors.required">
+	    	Обязательное поле для ввода
+	  	</div>
+	  	<div *ngIf="premium.errors.pattern">
+	    	Введите число
+	  	</div>
   	</div>
   	<div class="form-row">
 		<label for="premium">
@@ -32,6 +72,10 @@
   	
   	<div class="form-row">
 		<button class="button" type="submit">Расчитать</button>
+  	</div>
+
+  	<div class="form-row">
+		<p>{{ result }}</p>
   	</div>
 	
 </form>
